# AISCL

./: .env.compose.server.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_NOTES.md  README.md  RELEASE_REPO_GUIDE.md  docker-compose.experiment.yml  docker-compose.images.yml  docker-compose.server.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  .env.server.example  .pylintrc  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  run_backend.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  cache.py  config.py  db_optimization.py  error_handlers.py  llm_config.py  logging_config.py  monitoring.py  permissions.py  security.py  tasks.py
backend/app/repositories/: __init__.py  activity_log.py  ai_conversation.py  ai_intervention_rule.py  ai_message.py  ai_role.py  analytics_daily_stats.py  calendar_event.py  chat_log.py  collaboration_snapshot.py  course.py  dashboard_snapshot.py  doc_comment.py  document.py  inquiry_snapshot.py  project.py  refresh_token.py  research_event.py  resource.py  resource_embedding.py  system_config.py  system_log.py  task.py  user.py  web_annotation.py  wiki_item.py
backend/app/services/: __init__.py  activity_service.py  ai_service.py  analytics_service.py  auth_service.py  cache_service.py  collaboration_service.py  embedding_service.py  inquiry_service.py  intervention_service.py  project_service.py  rag_service.py  research_config_service.py  research_event_service.py  room_mapping_service.py  storage_service.py  text_extraction_service.py  vector_store_service.py  (+2 more)
backend/scripts/: init_admin.py
(+229 files in other folders)
